<resources>
    <string name="app_name">Leaders</string>
    <string name="description_hours">%1$d learning hours, %2$s</string>
    <string name="description_skilliq">%1$d skill IQ score, %2$s</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="github_link">Project on GITHUB (link)</string>
    <string name="submit">Submit</string>
    <string name="project_submission">Project Submission</string>
    <string name="google_africa_logo">Google Africa Developer Scholarship Logo</string>
    <string name="learner_badge_content_description">Learner badge</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="result_image">Result image</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no_internet">No connection Internet, please check your internet</string>
</resources>